--- a/clone/src/components/Header/Header.module.css
+++ b/clone/src/components/Header/Header.module.css
@@ -3,25 +3,42 @@
     top: 20px;
     height: 72px;
     width: 100%;
+    /* max-width: 90rem; */
 }
 
 .header {
-    display: flex;
-    position: absolute;
+    /* display: flex; */
+    /* position: absolute; */
+    display: block;
     top: 20px;
+    width: inherit;
 }
 
 .header ul {
-    /* text-align: center; */
+    position: relative;
+    width: inherit;
+    max-width: 90rem;
     height: 72px;
-    display: flex;
-    position: absolute;
-    color: white;
-    justify-content: flex-end;
     list-style: none;
-    gap: 1rem;
+    margin: 0 auto;
+    background-color: red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: 4;
+    color: white;
+    /* background: transparent; */
+    -webkit-box-align: center;
+    -webkit-box-pack: end;
+    opacity: 1;
 }
 
 .header ul li {
-    
+    /* list-style: none; */
+    /* background-color: green; */
+    opacity: 1;
+    z-index: 5;
+    color: white;
+    font-size: 1em;
+    font-weight: 800;
 }
