--- a/clone/src/pages/Landing/Landing.module.css
+++ b/clone/src/pages/Landing/Landing.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
     margin: 0;
@@ -6,21 +7,41 @@
     height: 200vh;
 }
 
-.image {
-    display: flex;
-    width: 100vw;
-    /* height: 100%; */
-    object-fit: cover;
-    height: 36rem;
-    box-sizing: inherit;
-    overflow: hidden;
-    position: relative;
+.container {
+    display: relative;
+    width: 100%;
+    height: 100%;
 }
 
-.image img {
-    width: 100vw;
-    height: 100%;
-    box-sizing: inherit;
+.container > img {
+    max-height: 36rem;
     object-fit: cover;
-    filter: unset;
+    width: 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+}
+
+.overlay ul {
+    list-style: none;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+    max-width: 65rem;
+    margin: 0 auto;
+    padding: 0px 1.5rem;
+    color: white;
+    font-family: 'Nunito', sans-serif;
+}
+
+.overlay ul li {
+    font-size: 1.4rem;
+    line-height: 1.2;
+    text-align: right;
+    font-weight: 100;
 }
